overflow fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+    overflow: hidden;
 }
 
 body {
@@ -19,7 +20,6 @@ body {
 	position: absolute;
 	top: 0;
 	padding: 20px;
-	margin: 20px;
 	width: 100%;
 	height: 100%;
 	background-color: rgb(247, 249, 251);
@@ -36,6 +36,7 @@ body {
 	color: #414040;
 	font-weight: 400;
 	font-size: 30px;
+    height: 10%;
 }
 
 .underline {
@@ -48,7 +49,7 @@ body {
 
 .menu__button {
 	position: relative;
-	// margin: 20px;
+	margin: 20px;
 	padding: 30px 50px;
 	background-color: #039dff;
 	border: 2px solid black;
@@ -69,9 +70,7 @@ body {
 	border-radius: 30px;
 }
 
-.dissapear {
-	top: -100%;
-}
+
 
 .questions__question,
 .questions__answer {
